<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrapbookingRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.asg1.scrapbooking.MainActivity" >

    <TextView
        android:id="@+id/famouslandmarksTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/famous"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/wallTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:text="@string/thewall"
        android:textStyle="italic|bold" />

    <ImageView
        android:id="@+id/wallImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="198dp"
        
        android:layout_marginTop="35dp"
        android:contentDescription="@string/wall_china"
        android:src="@drawable/wall" />

    <TextView
        android:id="@+id/pyramidTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="182dp"
        android:text="@string/thepyramid"
        android:textStyle="italic|bold" />

    <ImageView
        android:id="@+id/pyramidImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="198dp"
        android:layout_marginTop="148dp"
        android:contentDescription="@string/pyramid_gaza"
        android:src="@drawable/pyramid" />

    <TextView
        android:id="@+id/stonehengeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="295dp"
        android:text="@string/thestonehenge"
        android:textStyle="italic|bold" />

    <ImageView
        android:id="@+id/stonehengeImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="198dp"
        android:layout_marginTop="260dp"
        android:contentDescription="@string/stonehenge_wiltsire"
        android:src="@drawable/stonehenge" />

    <TextView
        android:id="@+id/colosseumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:text="@string/thecolosseum"
        android:textStyle="italic|bold" />

    <ImageView
        android:id="@+id/colosseumImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="198dp"
        android:layout_marginTop="372dp"
        android:contentDescription="@string/colosseum_italy"
        android:src="@drawable/colosseum" />


</RelativeLayout>

<!-- 
launch Image source: Internet
Address:https://www.google.ca/search?q=landmark+png+pictures&espv=2&biw=1280&bih=578&tbm=isch&tbo=u&source=univ&sa=X&ei=2Y9TVYnqBPOBsQSJ24HQCQ&ved=0CDcQ7Ak#tbm=isch&q=png+pictures+landmarks+of+the+world&imgrc=oUf-8jUCCShinM%253A%3BwGe9XXQ5REpMSM%3Bhttp%253A%252F%252Fassets.tripagogo.com%252Fimgs%252Fdefault_so.png%3Bhttp%253A%252F%252Ftripagogo.com%252F%3B150%3B150
Landmark image source: Internet
Address: https://www.google.ca/search?q=landmark+png+pictures&espv=2&biw=1280&bih=578&tbm=isch&tbo=u&source=univ&sa=X&ei=2Y9TVYnqBPOBsQSJ24HQCQ&ved=0CDcQ7Ak#tbm=isch&q=top+historical+places+to+visit+in+the+world
 -->

